# docs/swagger.json
@@ -9,41 +9,7 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/criptografar-com-chave-aleatoria": {
-            "post": {
-                "description": "Aplica a cifra de Vernam ao texto fornecido com chave aleatória.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "criptografia"
-                ],
-                "summary": "Criptografar com chave aleatória",
-                "parameters": [
-                    {
-                        "description": "Texto e chave",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.CriptografiaChaveAleatoriaRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.CriptografiaChaveAleatoriaResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/criptografar-com-chave-propria": {
+        "/cifrar": {
             "post": {
                 "description": "Aplica a cifra de Vernam ao texto fornecido com a chave informada.",
                 "consumes": [
@@ -55,7 +21,7 @@
                 "tags": [
                     "criptografia"
                 ],
-                "summary": "Criptografar com sua chave",
+                "summary": "Cifrar uma mensagem com uma chave",
                 "parameters": [
                     {
                         "description": "Texto e chave",
@@ -63,7 +29,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.CriptoDescriptoRequest"
+                            "$ref": "#/definitions/models.RequestCifrarDTO"
                         }
                     }
                 ],
@@ -71,13 +37,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.CriptoDescriptoResponse"
+                            "$ref": "#/definitions/models.ResponseCifrarDTO"
                         }
                     }
                 }
             }
         },
-        "/descriptografar": {
+        "/decifrar": {
             "post": {
                 "description": "Aplica a cifra de Vernam ao texto fornecido com a chave informada.",
                 "consumes": [
@@ -89,7 +55,7 @@
                 "tags": [
                     "descriptografia"
                 ],
-                "summary": "Descriptografar mensagem com cifra de vernan",
+                "summary": "Decifrar mensagem com cifra de vernan",
                 "parameters": [
                     {
                         "description": "Texto e chave",
@@ -97,7 +63,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.CriptoDescriptoRequest"
+                            "$ref": "#/definitions/models.RequestDecifrarDTO"
                         }
                     }
                 ],
@@ -105,7 +71,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.CriptoDescriptoResponse"
+                            "$ref": "#/definitions/models.ResponseDecifrarDTO"
                         }
                     }
                 }
@@ -113,47 +79,47 @@
         }
     },
     "definitions": {
-        "models.CriptoDescriptoRequest": {
+        "models.RequestCifrarDTO": {
             "type": "object",
             "required": [
                 "chave",
-                "texto"
+                "textoClaro"
             ],
             "properties": {
                 "chave": {
                     "type": "string"
                 },
-                "texto": {
+                "textoClaro": {
                     "type": "string"
                 }
             }
         },
-        "models.CriptoDescriptoResponse": {
+        "models.RequestDecifrarDTO": {
             "type": "object",
             "properties": {
-                "resultado": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.CriptografiaChaveAleatoriaRequest": {
-            "type": "object",
-            "required": [
-                "texto"
-            ],
-            "properties": {
-                "texto": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.CriptografiaChaveAleatoriaResponse": {
-            "type": "object",
-            "properties": {
-                "chave_usada": {
+                "chave": {
                     "type": "string"
                 },
-                "texto_criptografado": {
+                "textoCifrado": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.ResponseCifrarDTO": {
+            "type": "object",
+            "properties": {
+                "textoCifrado": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.ResponseDecifrarDTO": {
+            "type": "object",
+            "required": [
+                "textoClaro"
+            ],
+            "properties": {
+                "textoClaro": {
                     "type": "string"
                 }
             }
