# models/CriptoDescriptoResponse.go
@@ -1,5 +1,0 @@
-package models
-
-type CriptoDescriptoResponse struct {
-	Resultado string `json:"resultado"`
-}
