# models/CriptografiaChaveAleatoriaRequest.go
@@ -1,5 +1,0 @@
-package models
-
-type CriptografiaChaveAleatoriaRequest struct {
-	Texto string `json:"texto" binding:"required"`
-}
