# models/CriptografiaChaveAleatoriaResponse.go
@@ -1,6 +1,0 @@
-package models
-
-type CriptografiaChaveAleatoriaResponse struct {
-	TextoCriptografado string `json:"texto_criptografado"`
-	ChaveUsada         string `json:"chave_usada"`
-}
