# models/RequestCifrarDTO.go
@@ -1,0 +1,6 @@
+package models
+
+type RequestCifrarDTO struct {
+	TextoClaro string `json:"textoClaro" binding:"required"`
+	Chave      string `json:"chave" binding:"required"`
+}
