# models/RequestDecifrarDTO.go
@@ -1,0 +1,6 @@
+package models
+
+type RequestDecifrarDTO struct {
+	TextoCifrado string `json:"textoCifrado"`
+	Chave        string `json:"chave"`
+}
