# models/ResponseCifrarDTO.go
@@ -1,0 +1,5 @@
+package models
+
+type ResponseCifrarDTO struct {
+	TextoCifrado string `json:"textoCifrado"`
+}
