# models/ResponseDecifrarDTO.go
@@ -1,0 +1,5 @@
+package models
+
+type ResponseDecifrarDTO struct {
+	TextoClaro string `json:"textoClaro" binding:"required"`
+}
